libs/vulkan-mem/vk_mem_alloc.h

    extern PFN_vkGetInstanceProcAddr vkGetInstanceProcAddr;
    extern PFN_vkGetDeviceProcAddr vkGetDeviceProcAddr;
    extern PFN_vkGetPhysicalDeviceProperties vkGetPhysicalDeviceProperties;
    extern PFN_vkGetPhysicalDeviceMemoryProperties vkGetPhysicalDeviceMemoryProperties;
    extern PFN_vkAllocateMemory vkAllocateMemory;
    extern PFN_vkFreeMemory vkFreeMemory;
    extern PFN_vkMapMemory vkMapMemory;
    extern PFN_vkUnmapMemory vkUnmapMemory;
    extern PFN_vkFlushMappedMemoryRanges vkFlushMappedMemoryRanges;
    extern PFN_vkInvalidateMappedMemoryRanges vkInvalidateMappedMemoryRanges;
    extern PFN_vkBindBufferMemory vkBindBufferMemory;
    extern PFN_vkBindImageMemory vkBindImageMemory;
    extern PFN_vkGetBufferMemoryRequirements vkGetBufferMemoryRequirements;
    extern PFN_vkGetImageMemoryRequirements vkGetImageMemoryRequirements;
    extern PFN_vkCreateBuffer vkCreateBuffer;
    extern PFN_vkDestroyBuffer vkDestroyBuffer;
    extern PFN_vkCreateImage vkCreateImage;
    extern PFN_vkDestroyImage vkDestroyImage;
    extern PFN_vkCmdCopyBuffer vkCmdCopyBuffer;
/** \struct VmaAllocator
\brief Represents main object of this library initialized.

Fill structure #VmaAllocatorCreateInfo and call function vmaCreateAllocator() to create it.
Call function vmaDestroyAllocator() to destroy it.

It is recommended to create just one object of this type per `VkDevice` object,
right after Vulkan is initialized and keep it alive until before Vulkan device is destroyed.
*/
    VK_DEFINE_HANDLE(VmaAllocator)

        /// Callback function called after successful vkAllocateMemory.
        typedef void (VKAPI_PTR* PFN_vmaAllocateDeviceMemoryFunction)(
            VmaAllocator VMA_NOT_NULL                    allocator,
            uint32_t                                     memoryType,
            VkDeviceMemory VMA_NOT_NULL_NON_DISPATCHABLE memory,
            VkDeviceSize                                 size,
            void* VMA_NULLABLE                           pUserData);
    /// Callback function called before vkFreeMemory.
    typedef void (VKAPI_PTR* PFN_vmaFreeDeviceMemoryFunction)(
        VmaAllocator VMA_NOT_NULL                    allocator,
        uint32_t                                     memoryType,
        VkDeviceMemory VMA_NOT_NULL_NON_DISPATCHABLE memory,
        VkDeviceSize                                 size,
        void* VMA_NULLABLE                           pUserData);
    /** \brief Set of callbacks that the library will call for `vkAllocateMemory` and `vkFreeMemory`.

    Provided for informative purpose, e.g. to gather statistics about number of
    allocations or total amount of memory allocated in Vulkan.

    Used in VmaAllocatorCreateInfo::pDeviceMemoryCallbacks.
    */
    typedef struct VmaDeviceMemoryCallbacks {
        /// Optional, can be null.
        PFN_vmaAllocateDeviceMemoryFunction VMA_NULLABLE pfnAllocate;
        /// Optional, can be null.
        PFN_vmaFreeDeviceMemoryFunction VMA_NULLABLE pfnFree;
        /// Optional, can be null.
        void* VMA_NULLABLE pUserData;
    } VmaDeviceMemoryCallbacks;
    /// Flags for created #VmaAllocator.
    typedef enum VmaAllocatorCreateFlagBits {
        /** \brief Allocator and all objects created from it will not be synchronized internally, so you must guarantee they are used from only one thread at a time or synchronized externally by you.

        Using this flag may increase performance because internal mutexes are not used.
        */
        VMA_ALLOCATOR_CREATE_EXTERNALLY_SYNCHRONIZED_BIT = 0x00000001,
        /** \brief Enables usage of VK_KHR_dedicated_allocation extension.

        The flag works only if VmaAllocatorCreateInfo::vulkanApiVersion `== VK_API_VERSION_1_0`.
        When it's `VK_API_VERSION_1_1`, the flag is ignored because the extension has been promoted to Vulkan 1.1.

        Using this extenion will automatically allocate dedicated blocks of memory for
        some buffers and images instead of suballocating place for them out of bigger
        memory blocks (as if you explicitly used #VMA_ALLOCATION_CREATE_DEDICATED_MEMORY_BIT
        flag) when it is recommended by the driver. It may improve performance on some
        GPUs.

        You may set this flag only if you found out that following device extensions are
        supported, you enabled them while creating Vulkan device passed as
        VmaAllocatorCreateInfo::device, and you want them to be used internally by this
        library:

        - VK_KHR_get_memory_requirements2 (device extension)
        - VK_KHR_dedicated_allocation (device extension)

        When this flag is set, you can experience following warnings reported by Vulkan
        validation layer. You can ignore them.

        > vkBindBufferMemory(): Binding memory to buffer 0x2d but vkGetBufferMemoryRequirements() has not been called on that buffer.
        */
        VMA_ALLOCATOR_CREATE_KHR_DEDICATED_ALLOCATION_BIT = 0x00000002,
        /**
        Enables usage of VK_KHR_bind_memory2 extension.

        The flag works only if VmaAllocatorCreateInfo::vulkanApiVersion `== VK_API_VERSION_1_0`.
        When it's `VK_API_VERSION_1_1`, the flag is ignored because the extension has been promoted to Vulkan 1.1.

        You may set this flag only if you found out that this device extension is supported,
        you enabled it while creating Vulkan device passed as VmaAllocatorCreateInfo::device,
        and you want it to be used internally by this library.

        The extension provides functions `vkBindBufferMemory2KHR` and `vkBindImageMemory2KHR`,
        which allow to pass a chain of `pNext` structures while binding.
        This flag is required if you use `pNext` parameter in vmaBindBufferMemory2() or vmaBindImageMemory2().
        */
        VMA_ALLOCATOR_CREATE_KHR_BIND_MEMORY2_BIT = 0x00000004,
        /**
        Enables usage of VK_EXT_memory_budget extension.

        You may set this flag only if you found out that this device extension is supported,
        you enabled it while creating Vulkan device passed as VmaAllocatorCreateInfo::device,
        and you want it to be used internally by this library, along with another instance extension
        VK_KHR_get_physical_device_properties2, which is required by it (or Vulkan 1.1, where this extension is promoted).

        The extension provides query for current memory usage and budget, which will probably
        be more accurate than an estimation used by the library otherwise.
        */
        VMA_ALLOCATOR_CREATE_EXT_MEMORY_BUDGET_BIT = 0x00000008,
        /**
        Enables usage of VK_AMD_device_coherent_memory extension.

        You may set this flag only if you:

        - found out that this device extension is supported and enabled it while creating Vulkan device passed as VmaAllocatorCreateInfo::device,
        - checked that `VkPhysicalDeviceCoherentMemoryFeaturesAMD::deviceCoherentMemory` is true and set it while creating the Vulkan device,
        - want it to be used internally by this library.

        The extension and accompanying device feature provide access to memory types with
        `VK_MEMORY_PROPERTY_DEVICE_COHERENT_BIT_AMD` and `VK_MEMORY_PROPERTY_DEVICE_UNCACHED_BIT_AMD` flags.
        They are useful mostly for writing breadcrumb markers - a common method for debugging GPU crash/hang/TDR.

        When the extension is not enabled, such memory types are still enumerated, but their usage is illegal.
        To protect from this error, if you don't create the allocator with this flag, it will refuse to allocate any memory or create a custom pool in such memory type,
        returning `VK_ERROR_FEATURE_NOT_PRESENT`.
        */
        VMA_ALLOCATOR_CREATE_AMD_DEVICE_COHERENT_MEMORY_BIT = 0x00000010,
        /**
        Enables usage of "buffer device address" feature, which allows you to use function
        `vkGetBufferDeviceAddress*` to get raw GPU pointer to a buffer and pass it for usage inside a shader.

        You may set this flag only if you:

        1. (For Vulkan version < 1.2) Found as available and enabled device extension
        VK_KHR_buffer_device_address.
        This extension is promoted to core Vulkan 1.2.
        2. Found as available and enabled device feature `VkPhysicalDeviceBufferDeviceAddressFeatures*::bufferDeviceAddress`.

        When this flag is set, you can create buffers with `VK_BUFFER_USAGE_SHADER_DEVICE_ADDRESS_BIT*` using VMA.
        The library automatically adds `VK_MEMORY_ALLOCATE_DEVICE_ADDRESS_BIT*` to
        allocated memory blocks wherever it might be needed.

        For more information, see documentation chapter \ref enabling_buffer_device_address.
        */
        VMA_ALLOCATOR_CREATE_BUFFER_DEVICE_ADDRESS_BIT = 0x00000020,

        VMA_ALLOCATOR_CREATE_FLAG_BITS_MAX_ENUM = 0x7FFFFFFF
    } VmaAllocatorCreateFlagBits;
    typedef VkFlags VmaAllocatorCreateFlags;
    /** \brief Pointers to some Vulkan functions - a subset used by the library.

    Used in VmaAllocatorCreateInfo::pVulkanFunctions.
    */
    typedef struct VmaVulkanFunctions {
        PFN_vkGetPhysicalDeviceProperties VMA_NULLABLE vkGetPhysicalDeviceProperties;
        PFN_vkGetPhysicalDeviceMemoryProperties VMA_NULLABLE vkGetPhysicalDeviceMemoryProperties;
        PFN_vkAllocateMemory VMA_NULLABLE vkAllocateMemory;
        PFN_vkFreeMemory VMA_NULLABLE vkFreeMemory;
        PFN_vkMapMemory VMA_NULLABLE vkMapMemory;
        PFN_vkUnmapMemory VMA_NULLABLE vkUnmapMemory;
        PFN_vkFlushMappedMemoryRanges VMA_NULLABLE vkFlushMappedMemoryRanges;
        PFN_vkInvalidateMappedMemoryRanges VMA_NULLABLE vkInvalidateMappedMemoryRanges;
        PFN_vkBindBufferMemory VMA_NULLABLE vkBindBufferMemory;
        PFN_vkBindImageMemory VMA_NULLABLE vkBindImageMemory;
        PFN_vkGetBufferMemoryRequirements VMA_NULLABLE vkGetBufferMemoryRequirements;
        PFN_vkGetImageMemoryRequirements VMA_NULLABLE vkGetImageMemoryRequirements;
        PFN_vkCreateBuffer VMA_NULLABLE vkCreateBuffer;
        PFN_vkDestroyBuffer VMA_NULLABLE vkDestroyBuffer;
        PFN_vkCreateImage VMA_NULLABLE vkCreateImage;
        PFN_vkDestroyImage VMA_NULLABLE vkDestroyImage;
        PFN_vkCmdCopyBuffer VMA_NULLABLE vkCmdCopyBuffer;
#if VMA_DEDICATED_ALLOCATION || VMA_VULKAN_VERSION >= 1001000
        PFN_vkGetBufferMemoryRequirements2KHR VMA_NULLABLE vkGetBufferMemoryRequirements2KHR;
        PFN_vkGetImageMemoryRequirements2KHR VMA_NULLABLE vkGetImageMemoryRequirements2KHR;
#endif
#if VMA_BIND_MEMORY2 || VMA_VULKAN_VERSION >= 1001000
        PFN_vkBindBufferMemory2KHR VMA_NULLABLE vkBindBufferMemory2KHR;
        PFN_vkBindImageMemory2KHR VMA_NULLABLE vkBindImageMemory2KHR;
#endif
#if VMA_MEMORY_BUDGET || VMA_VULKAN_VERSION >= 1001000
        PFN_vkGetPhysicalDeviceMemoryProperties2KHR VMA_NULLABLE vkGetPhysicalDeviceMemoryProperties2KHR;
#endif
    } VmaVulkanFunctions;
    /// Flags to be used in VmaRecordSettings::flags.
    typedef enum VmaRecordFlagBits {
        /** \brief Enables flush after recording every function call.

        Enable it if you expect your application to crash, which may leave recording file truncated.
        It may degrade performance though.
        */
        VMA_RECORD_FLUSH_AFTER_CALL_BIT = 0x00000001,

        VMA_RECORD_FLAG_BITS_MAX_ENUM = 0x7FFFFFFF
    } VmaRecordFlagBits;
    typedef VkFlags VmaRecordFlags;
    /// Parameters for recording calls to VMA functions. To be used in VmaAllocatorCreateInfo::pRecordSettings.
    typedef struct VmaRecordSettings
    {
        /// Flags for recording. Use #VmaRecordFlagBits enum.
        VmaRecordFlags flags;
        /** \brief Path to the file that should be written by the recording.

        Suggested extension: "csv".
        If the file already exists, it will be overwritten.
        It will be opened for the whole time #VmaAllocator object is alive.
        If opening this file fails, creation of the whole allocator object fails.
        */
        const char* VMA_NOT_NULL pFilePath;
    } VmaRecordSettings;