src/vk_mem_alloc.zig

// manually added translation layer
const vk = @import("vulkan");

const PFN_vkAllocateMemory = vk.PfnAllocateMemory;
const PFN_vkFreeMemory = vk.PfnFreeMemory;
const PFN_vkMapMemory = vk.PfnMapMemory;
const PFN_vkUnmapMemory = vk.PfnUnmapMemory;
const PFN_vkFlushMappedMemoryRanges = vk.PfnFlushMappedMemoryRanges;
const PFN_vkInvalidateMappedMemoryRanges = vk.PfnInvalidateMappedMemoryRanges;
const PFN_vkBindBufferMemory = vk.PfnBindBufferMemory;
const PFN_vkBindImageMemory = vk.PfnBindImageMemory;
const PFN_vkGetBufferMemoryRequirements = vk.PfnGetBufferMemoryRequirements;
const PFN_vkGetImageMemoryRequirements = vk.PfnGetImageMemoryRequirements;
const PFN_vkCreateBuffer = vk.PfnCreateBuffer;
const PFN_vkDestroyBuffer = vk.PfnDestroyBuffer;
const PFN_vkCreateImage = vk.PfnCreateImage;
const PFN_vkDestroyImage = vk.PfnDestroyImage;
const PFN_vkCmdCopyBuffer = vk.PfnCmdCopyBuffer;
// end translation layer


pub const struct_VmaAllocator_T = opaque {};
pub const VmaAllocator = ?*struct_VmaAllocator_T;
pub const PFN_vmaAllocateDeviceMemoryFunction = ?fn (VmaAllocator, u32, vk.DeviceMemory, vk.DeviceSize, ?*anyopaque) callconv(.C) void;
pub const PFN_vmaFreeDeviceMemoryFunction = ?fn (VmaAllocator, u32, vk.DeviceMemory, vk.DeviceSize, ?*anyopaque) callconv(.C) void;
pub const struct_VmaDeviceMemoryCallbacks = extern struct {
    pfnAllocate: PFN_vmaAllocateDeviceMemoryFunction,
    pfnFree: PFN_vmaFreeDeviceMemoryFunction,
    pUserData: ?*anyopaque,
};
pub const VmaDeviceMemoryCallbacks = struct_VmaDeviceMemoryCallbacks;
pub const VMA_ALLOCATOR_CREATE_EXTERNALLY_SYNCHRONIZED_BIT: c_int = 1;
pub const VMA_ALLOCATOR_CREATE_KHR_DEDICATED_ALLOCATION_BIT: c_int = 2;
pub const VMA_ALLOCATOR_CREATE_KHR_BIND_MEMORY2_BIT: c_int = 4;
pub const VMA_ALLOCATOR_CREATE_EXT_MEMORY_BUDGET_BIT: c_int = 8;
pub const VMA_ALLOCATOR_CREATE_AMD_DEVICE_COHERENT_MEMORY_BIT: c_int = 16;
pub const VMA_ALLOCATOR_CREATE_BUFFER_DEVICE_ADDRESS_BIT: c_int = 32;
pub const VMA_ALLOCATOR_CREATE_FLAG_BITS_MAX_ENUM: c_int = 2147483647;
pub const enum_VmaAllocatorCreateFlagBits = c_uint;
pub const VmaAllocatorCreateFlagBits = enum_VmaAllocatorCreateFlagBits;
pub const VmaAllocatorCreateFlags = vk.Flags;
pub const struct_VmaVulkanFunctions = extern struct {
    vkGetInstanceProcAddr: vk.PfnGetInstanceProcAddr,
    vkGetDeviceProcAddr: vk.PfnGetDeviceProcAddr,
    vkGetPhysicalDeviceProperties: vk.PfnGetPhysicalDeviceProperties,
    vkGetPhysicalDeviceMemoryProperties: vk.PfnGetPhysicalDeviceMemoryProperties,
    vkAllocateMemory: PFN_vkAllocateMemory,
    vkFreeMemory: PFN_vkFreeMemory,
    vkMapMemory: PFN_vkMapMemory,
    vkUnmapMemory: PFN_vkUnmapMemory,
    vkFlushMappedMemoryRanges: PFN_vkFlushMappedMemoryRanges,
    vkInvalidateMappedMemoryRanges: PFN_vkInvalidateMappedMemoryRanges,
    vkBindBufferMemory: PFN_vkBindBufferMemory,
    vkBindImageMemory: PFN_vkBindImageMemory,
    vkGetBufferMemoryRequirements: PFN_vkGetBufferMemoryRequirements,
    vkGetImageMemoryRequirements: PFN_vkGetImageMemoryRequirements,
    vkCreateBuffer: PFN_vkCreateBuffer,
    vkDestroyBuffer: PFN_vkDestroyBuffer,
    vkCreateImage: PFN_vkCreateImage,
    vkDestroyImage: PFN_vkDestroyImage,
    vkCmdCopyBuffer: PFN_vkCmdCopyBuffer,
    vkGetBufferMemoryRequirements2KHR: vk.PfnGetBufferMemoryRequirements2,
    vkGetImageMemoryRequirements2KHR: vk.PfnGetImageMemoryRequirements2,
    vkBindBufferMemory2KHR: vk.PfnBindBufferMemory2,
    vkBindImageMemory2KHR: vk.PfnBindImageMemory2,
    vkGetPhysicalDeviceMemoryProperties2KHR: vk.PfnGetPhysicalDeviceMemoryProperties2,
    vkGetDeviceBufferMemoryRequirements: vk.PfnGetDeviceBufferMemoryRequirements,
    vkGetDeviceImageMemoryRequirements: vk.PfnGetDeviceImageMemoryRequirements,
};
pub const VmaVulkanFunctions = struct_VmaVulkanFunctions;
pub const VMA_RECORD_FLUSH_AFTER_CALL_BIT: c_int = 1;
pub const VMA_RECORD_FLAG_BITS_MAX_ENUM: c_int = 2147483647;
pub const enum_VmaRecordFlagBits = c_uint;
pub const VmaRecordFlagBits = enum_VmaRecordFlagBits;
pub const VmaRecordFlags = vk.Flags;
pub const struct_VmaRecordSettings = extern struct {
    flags: VmaRecordFlags,
    pFilePath: [*c]const u8,
};
pub const VmaRecordSettings = struct_VmaRecordSettings;
pub const struct_VmaAllocatorCreateInfo = extern struct {
    flags: VmaAllocatorCreateFlags,
    physicalDevice: vk.PhysicalDevice,
    device: vk.Device,
    preferredLargeHeapBlockSize: vk.DeviceSize,
    pAllocationCallbacks: [*c]const vk.AllocationCallbacks,
    pDeviceMemoryCallbacks: [*c]const VmaDeviceMemoryCallbacks,
    pHeapSizeLimit: [*c]const vk.DeviceSize,
    pVulkanFunctions: [*c]const VmaVulkanFunctions,
    instance: vk.Instance,
    vulkanApiVersion: u32,
    pTypeExternalMemoryHandleTypes: vk.ExternalMemoryHandleTypeFlagsKHR,
};
